api_versioned_docs/version-12.0.5/avalonia/media/drawinggroup.mdx
---
title: 'DrawingGroup'
hide_title: true
slug: '/avalonia/media/drawinggroup'
uid: 'Avalonia.Media.DrawingGroup'
commentId: 'T:Avalonia.Media.DrawingGroup'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">DrawingGroup Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Media</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class DrawingGroup
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="../avaloniaobject">AvaloniaObject</a> <span className="apiref-page__relation-separator">-&gt;</span> <a href="drawing">Drawing</a> <span className="apiref-page__relation-separator">-&gt;</span> DrawingGroup
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [DrawingGroup](#uid-1df7dfb055) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-1df7dfb055"></span>

### DrawingGroup Constructor

```csharp
public DrawingGroup()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [GetBounds](#uid-e5beaaac74) | No summary available. |
| [Open](#uid-d738300452) | No summary available. |
| [Draw](drawing.mdx#uid-530e57d126) | Draws this drawing to the given [Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext). Inherited from [Drawing](drawing.mdx). |
| [Bind (8 overloads)](../avaloniaobject.mdx#uid-1c60c7bda3) | Binds a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) to an [Avalonia.Data.BindingBase](xref:Avalonia.Data.BindingBase). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CheckAccess](../avaloniaobject.mdx#uid-260ff7a68d) | Returns a value indicating whether the current thread is the UI thread. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [ClearValue (4 overloads)](../avaloniaobject.mdx#uid-41de208fbe) | Clears a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty)'s local value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [CoerceValue](../avaloniaobject.mdx#uid-3bec32f39e) | Coerces the specified [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty). Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Equals](../avaloniaobject.mdx#uid-a8a8e94305) | Compares two objects using reference equality. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetBaseValue](../avaloniaobject.mdx#uid-9c615efbba) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetHashCode](../avaloniaobject.mdx#uid-7f7db1e7a2) | Gets the hash code for the object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [GetValue (3 overloads)](../avaloniaobject.mdx#uid-5142cd4792) | Gets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsAnimating](../avaloniaobject.mdx#uid-8cbfc7521a) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is animating. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [IsSet](../avaloniaobject.mdx#uid-f8bf0bbdcc) | Checks whether a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) is set on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetCurrentValue (2 overloads)](../avaloniaobject.mdx#uid-38759fd088) | Sets the value of a dependency property without changing its value source. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [SetValue (3 overloads)](../avaloniaobject.mdx#uid-47d14e19d7) | Sets a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [VerifyAccess](../avaloniaobject.mdx#uid-3b9d3c9793) | Checks that the current thread is the UI thread and throws if not. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-e5beaaac74"></span>

### GetBounds Method

```csharp
public Avalonia.Rect GetBounds()
```

#### Returns

[Avalonia.Rect](xref:Avalonia.Rect)


</section>

<section className="apiref-page__member-entry">

<span id="uid-d738300452"></span>

### Open Method

```csharp
public Avalonia.Media.DrawingContext Open()
```

#### Returns

[Avalonia.Media.DrawingContext](xref:Avalonia.Media.DrawingContext)


</section>

## Properties

| Name | Description |
| --- | --- |
| [Children](#uid-c1af282204) | Gets or sets the collection that contains the child geometries. |
| [ClipGeometry](#uid-2a8954ac99) | No summary available. |
| [Effect](#uid-e0e423457d) | Gets or sets the effect to apply to the drawing group. |
| [Opacity](#uid-067da06ff5) | No summary available. |
| [OpacityMask](#uid-833aa2512a) | No summary available. |
| [Transform](#uid-6af7e42b93) | No summary available. |
| [Dispatcher](../avaloniaobject.mdx#uid-b25fa51632) | Returns the [Avalonia.AvaloniaObject.Dispatcher](xref:Avalonia.AvaloniaObject.Dispatcher) that this [Avalonia.AvaloniaObject](xref:Avalonia.AvaloniaObject) is associated with. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |
| [Item](../avaloniaobject.mdx#uid-c1d1f1bc0f) | Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-c1af282204"></span>

### Children Property

Gets or sets the collection that contains the child geometries.

```csharp
public Avalonia.Media.DrawingCollection Children { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2a8954ac99"></span>

### ClipGeometry Property

```csharp
public Avalonia.Media.Geometry ClipGeometry { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-e0e423457d"></span>

### Effect Property

Gets or sets the effect to apply to the drawing group.

```csharp
public Avalonia.Media.IEffect Effect { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-067da06ff5"></span>

### Opacity Property

```csharp
public double Opacity { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-833aa2512a"></span>

### OpacityMask Property

```csharp
public Avalonia.Media.IBrush OpacityMask { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6af7e42b93"></span>

### Transform Property

```csharp
public Avalonia.Media.Transform Transform { get; set; }
```

</section>

## Fields

| Name | Description |
| --- | --- |
| [ChildrenProperty](#uid-7f2e5850e5) | No summary available. |
| [ClipGeometryProperty](#uid-c9e2fd4d23) | No summary available. |
| [EffectProperty](#uid-ba132327b1) | Defines the [Avalonia.Media.DrawingGroup.Effect](xref:Avalonia.Media.DrawingGroup.Effect) property. |
| [OpacityMaskProperty](#uid-003b975be6) | No summary available. |
| [OpacityProperty](#uid-88d64f3aa9) | No summary available. |
| [TransformProperty](#uid-a0fab94e4d) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-7f2e5850e5"></span>

### ChildrenProperty Field

```csharp
public Avalonia.DirectProperty<TOwner,TValue><Avalonia.Media.DrawingGroup, Avalonia.Media.DrawingCollection> ChildrenProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-c9e2fd4d23"></span>

### ClipGeometryProperty Field

```csharp
public Avalonia.StyledProperty<TValue><Avalonia.Media.Geometry> ClipGeometryProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ba132327b1"></span>

### EffectProperty Field

Defines the [Avalonia.Media.DrawingGroup.Effect](xref:Avalonia.Media.DrawingGroup.Effect) property.

```csharp
public Avalonia.StyledProperty<TValue><Avalonia.Media.IEffect> EffectProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-003b975be6"></span>

### OpacityMaskProperty Field

```csharp
public Avalonia.StyledProperty<TValue><Avalonia.Media.IBrush> OpacityMaskProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-88d64f3aa9"></span>

### OpacityProperty Field

```csharp
public Avalonia.StyledProperty<TValue><double> OpacityProperty
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a0fab94e4d"></span>

### TransformProperty Field

```csharp
public Avalonia.StyledProperty<TValue><Avalonia.Media.Transform> TransformProperty
```

</section>

## Events

| Name | Description |
| --- | --- |
| [PropertyChanged](../avaloniaobject.mdx#uid-d758e26fae) | Raised when a [Avalonia.AvaloniaProperty](xref:Avalonia.AvaloniaProperty) value changes on this object. Inherited from [AvaloniaObject](../avaloniaobject.mdx). |

</ApiRefPage>

